tests/NormalTests/paczka1/fuzzy1/74403055.err
Error in line 5: rn6k S464 163,5
Error in line 24: FB816bM S464 90,6
Error in line 23: ogFoMFT7bF S464 4,9
Error in line 17: S962 S203 37,5
Error in line 19: QI0 S203 97,6
Error in line 30: LAiBh4 S203 12,4
Error in line 29: FB816bM S203 86,2
